--- a/index.html
+++ b/index.html
@@ -6,23 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 </head>
 <body>
-    <div class="menu-container"></div>
-    <div class="formula-container"></div>
+    <div class="menu-container">
+        <select class="font-size">
+            <option value="8">8</option>
+            <option value="10">10</option>
+            <option value="12">12</option>
+            <option value="16">16</option>
+            <option value="20">20</option>
+            <option value="32">32</option>
+        </select>
+        <select class="font-family">
+            <option value="monospace">monospace</option>
+            <option value="sans-serif">sans-serif</option>
+            <option value="georgia">Georgia</option>
+            <option value="fantasy">fantasy</option>
+        </select>
+        <div class="bui-container">
+            <i class="fas fa-bold bold"></i>
+            <!-- <input type="button" class="bold" value="B"> -->
+            <i class="fas fa-italic italics"></i>
+            <!-- <input type="button" class="italics" value="I"> -->
+            <i class="fas fa-underline"></i>
+            <!-- <input type="button" class="underline" value="U"> -->
+        </div>
+        <div class="align-container">
+            <i class="fas fa-align-left"></i>
+            <i class="fas fa-align-center"></i>
+            <i class="fas fa-align-right"></i>
+        </div>
+        <div class="color-container">
+            <input type="color" class="color">
+            <input type="color" class="bg-color">
+        </div>
+    </div>
+    <div class="formula-container">
+        <input type="text" class="address-input">
+        <input type="text" class="formula-input">
+    </div>
     <div class="grid-container">
-        <div class="col-number">
-            <div class="left-box box"></div>
-            <div class="top-row"></div>
-        </div>
-        <div class="full-grid">
-            <div class="left-col"></div>
-            <div class="grid"></div>
-        </div>
-        
+        <div class="left-box box"></div>
+        <div class="top-row"></div>
+        <div class="left-col"></div>
+        <div class="grid"></div>
     </div>
     <div class="sheet-container">
-        <div class="add-sheet-btn-container">add</div>
+        <div class="add-sheet-btn-container">
+            <i class="fas fa-plus"></i>
+        </div>
         <div class="sheet-list">
             <div class="sheet active" idx="0">Sheet1</div>
         </div>
