Minor change in html, for underline

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- <input type="button" class="bold" value="B"> -->
             <i class="fas fa-italic italics"></i>
             <!-- <input type="button" class="italics" value="I"> -->
-            <i class="fas fa-underline"></i>
+            <i class="fas fa-underline underline"></i>
             <!-- <input type="button" class="underline" value="U"> -->
         </div>
         <div class="align-container">
