Partially implemented new, open, download feature

--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
         </div>
         <!-- new open save -->
         <div class="nos-container">
-            <span class="material-icons-outlined material-icons">
+            <span class="material-icons-outlined material-icons new">
                 add_circle_outline
             </span>
             <span class="material-icons-outlined material-icons">
                 folder_open
             </span>
-            <span class="material-icons-outlined material-icons">
-                save
+            <input type="file" name="" class="open">
+            <span class="material-icons-outlined material-icons save">
+                file_download
             </span>
         </div>
         
@@ -74,6 +75,7 @@
     </div>
     <script src="script.js"></script>
     <script src="grid.js"></script>
+    <script src="newOpenSave.js"></script>
     <script src="formula.js"></script>
 </body>
 </html>
